qubit benchmarking added

--- a/Qubit Models.ipynb
+++ b/Qubit Models.ipynb
@@ -673,19 +673,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "88d4d122",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['.DS_Store',\n",
+       " 'requirements.txt',\n",
+       " 'datasets.py',\n",
+       " 'Qutrit Models.ipynb',\n",
+       " 'qubit_models.py',\n",
+       " 'run_qutrit.py',\n",
+       " '__pycache__',\n",
+       " 'README.md',\n",
+       " 'recent_run.txt',\n",
+       " '.gitignore',\n",
+       " '.ipynb_checkpoints',\n",
+       " '.git',\n",
+       " 'qutrit_models.py',\n",
+       " 'Qubit Models.ipynb',\n",
+       " '07-handson-vqc',\n",
+       " 'helpers.py',\n",
+       " 'run_qubit.py']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "os.listdir()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "19ddec64",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "usage: run_qubit.py [-h] [--encoding_and_rotation {A,B,C,D,E,F,G}]\n",
+      "                    [--dataset {xor,moon,circular}]\n",
+      "                    [--dataset_size DATASET_SIZE] [--num_itr NUM_ITR]\n",
+      "\n",
+      "options:\n",
+      "  -h, --help            show this help message and exit\n",
+      "  --encoding_and_rotation {A,B,C,D,E,F,G}\n",
+      "                        choose the encoding and rotation scheme, default B\n",
+      "  --dataset {xor,moon,circular}\n",
+      "                        choose the dataset, default circular boundary\n",
+      "  --dataset_size DATASET_SIZE\n",
+      "                        Enter the dataset size\n",
+      "  --num_itr NUM_ITR     Enter number of iterations for training\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.system(\"python run_qubit.py --help\")"
+   ]
   },
   {
    "cell_type": "code",
